Change the register input. Put your own profile photo input
